# agent

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  test.txt
agent/: .env.elite  requirements-elite.txt
agent/src/: main_elite.py
agent/src/core/: graph.py
agent/src/memory/: cognee_setup.py
agent/src/tools/: arxiv.py  mcp_obsidian.py
agent/tests/: test_nodes.py
conductor/: plan.md  plan_intelligence.md  plan_v2.md  plan_v3.md  plan_v3_1.md  plan_v3_2.md  plan_v3_3.md  plan_v4.md  plan_v4_1.md  plan_v4_2.md  spec_intelligence.md  spec_v2.md  spec_v3.md  spec_v3_2.md  spec_v3_3.md  spec_v4.md  spec_v4_1.md  spec_v4_2.md
docs/plans/: 2026-04-02-ollag-elite-upgrade.md  2026-04-02-ollag-implementation.md  2026-04-07-aethermind-implementation.md
docs/specs/: 2026-04-02-ollag-design.md  2026-04-07-aethermind-design.md
skills/: weather.json
src/: agent.rs  bridge.rs  bridge_tests.rs  main.rs  ollama.rs  ui.rs
src/memory/: mod.rs
src/skills/: mod.rs
src/tools/: fs.rs  mod.rs  obsidian.rs  shell.rs
