[package]
name = "ollag"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ollama-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
futures-util = "0.3"
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
