[package]
name = "ollag"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ollama-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
futures-util = "0.3"
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
hnsw_rs = "0.1"
bincode = "1.3"
walkdir = "2.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
